--- a/changelog/index.mdx
+++ b/changelog/index.mdx
@@ -5,35 +5,25 @@ description: "Latest updates, features, and improvements to Triform"
 
 ## October 2025
 
-### v2.8.0 — October 15, 2025
+### v2.8.0 — September 30, 2025
 
 **New Features:**
-- 🎯 **Flow View Enhancements** — New minimap, improved node search, and auto-layout options
+- 🎯 **Flow View Enhancements** — Improved node handles
 - 🤖 **Triton Improvements** — Better code generation, faster responses, improved error explanations
-- 📊 **Execution Analytics** — New dashboard showing success rates, performance trends, and cost breakdowns
-- 🔐 **Enhanced Security** — IP allowlisting for webhooks, improved HMAC signature validation
+- 🔐 **Enhanced Security** — Improved HMAC signature validation
 
 **Improvements:**
 - Canvas performance optimized for large Projects (100+ nodes)
 - Faster execution startup times (30% reduction in cold starts)
 - Better error messages throughout the platform
-- Improved mobile/tablet viewing experience
 
 **Bug Fixes:**
-- Fixed: Execution logs sometimes not loading for concurrent runs
 - Fixed: Global Variables not updating in real-time
-- Fixed: Canvas zoom behavior on trackpads
 - Fixed: Webhook retry logic not respecting exponential backoff
 
-### v2.7.5 — October 1, 2025
-
-**New Features:**
-- 📝 **Bulk Project Operations** — Archive, tag, or export multiple Projects at once
-- 🔔 **Slack/Discord Integration** — Receive execution notifications in team chat
-- 📈 **Cost Tracking** — New cost breakdown by Project and component
+### v2.7.5 — September 25, 2025
 
 **Improvements:**
-- Execution trace now shows data preview for each node
 - Properties Panel tabs reorganized for better UX
 - Faster Project switching (reduced loading time)
 
@@ -47,15 +37,11 @@ description: "Latest updates, features, and improvements to Triform"
 ### v2.7.0 — September 20, 2025
 
 **New Features:**
-- 🚀 **Canary Deployments** — Gradual rollout to percentage of traffic (Enterprise)
 - 🔄 **Auto-Retry Logic** — Automatic retries with exponential backoff for Actions
-- 📦 **Component Library** — Share and reuse Actions/Flows across Projects
-- 🎨 **Custom Themes** — Light, dark, and auto themes
+- 📦 **Component Library** — Share and reuse Actions/Flows across Projects (backend, FE comes later)
 
 **Improvements:**
 - Triton now suggests optimizations for slow Flows
-- Better dependency conflict resolution
-- Enhanced audit logs with more detail
 - API response time improvements (20% faster)
 
 **Bug Fixes:**
@@ -67,8 +53,6 @@ description: "Latest updates, features, and improvements to Triform"
 ### v2.6.5 — September 5, 2025
 
 **New Features:**
-- 📊 **Execution Comparison** — Side-by-side comparison of two executions
-- 🔍 **Advanced Search** — Search Projects by component content
 - ⚡ **Quick Actions** — Keyboard shortcuts for common operations
 
 **Improvements:**
@@ -153,15 +137,10 @@ description: "Latest updates, features, and improvements to Triform"
 ### v2.4.0 — May 10, 2025
 
 **New Features:**
-- 🚀 **Blue-Green Deployments** — Zero-downtime deployments for Enterprise
-- 🔐 **2FA Enforcement** — Require 2FA for Organization members
-- 📁 **Project Folders** — Organize Projects into folders (Enterprise)
 - 🎨 **Custom Branding** — White-label option for Enterprise
 
 **Improvements:**
 - Canvas performance improvements (50% faster rendering)
-- Better mobile responsiveness
-- Enhanced execution trace visualization
 - Improved error handling in Actions
 
 **Bug Fixes:**
@@ -169,20 +148,6 @@ description: "Latest updates, features, and improvements to Triform"
 - Fixed: Agent tool calling timeout issues
 - Fixed: Canvas undo/redo state issues
 - Fixed: API rate limit headers incorrect
-
-## Versioning
-
-Triform uses semantic versioning (MAJOR.MINOR.PATCH):
-
-- **MAJOR** — Breaking changes or significant new capabilities
-- **MINOR** — New features, backwards-compatible
-- **PATCH** — Bug fixes and minor improvements
-
-## Release schedule
-
-- **Major releases:** Quarterly (every 3 months)
-- **Minor releases:** Monthly
-- **Patch releases:** As needed (typically weekly)
 
 ## Deprecation policy
 
@@ -203,9 +168,7 @@ Features marked **(Beta)** are:
 
 ## Staying updated
 
-**In-app notifications:** Bell icon shows new features  
 **Email digest:** Opt-in for monthly update emails  
-**Status page:** https://status.triform.ai  
 **Discord:** Announcements in community server  
 **RSS feed:** https://triform.ai/changelog/feed.xml
 
@@ -214,9 +177,7 @@ Features marked **(Beta)** are:
 Found a bug? We want to know!
 
 **Report via:**
-- [Report a Bug](/support/report-a-bug) in docs
-- Bug icon in app (bottom-right)
-- Email: support@triform.ai
+- Bug icon in app (right)
 - Discord: #bugs channel
 
 **Please include:**
@@ -231,7 +192,6 @@ Found a bug? We want to know!
 Have an idea? We'd love to hear it!
 
 **Submit via:**
-- [Request a Feature](/support/request-a-feature) in docs
 - Feature request icon in app
 - Email: product@triform.ai
 - Discord: #feature-requests channel
@@ -246,12 +206,5 @@ Popular requests often get built first!
 
 ## Next up
 
-Check our [Roadmap](/roadmap/alerts) to see what's coming next.
-
-## Archive
-
-Looking for older changes?
-
-**2024 Changelog:** [View archive](https://triform.ai/changelog/2024)  
-**2023 Changelog:** [View archive](https://triform.ai/changelog/2023)
+Check our Roadmap to see what's coming next.
 
