--- a/concepts/dependencies.mdx
+++ b/concepts/dependencies.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Requirements & Dependencies"
+title: "Dependencies"
 description: "Manage Python packages and dependencies for Actions"
 ---
 
@@ -473,8 +473,5 @@ sendgrid==6.10.0
 
 ## Next steps
 
-- [Understanding Actions](/concepts/actions)
-- [Building with Triton](/triton/building)
-- [Security Overview](/security/overview)
-- [Quotas - Resource Based](/quotas/resource-based)
+Continue exploring the documentation to learn about Actions, building with Triton, security, and resource-based quotas.
 
