--- a/concepts/flows.mdx
+++ b/concepts/flows.mdx
@@ -18,7 +18,7 @@ description: "Connect nodes into executable graphs; patterns and practices"
 
 ## Practices
 
-- Keep Flows legible left‑to‑right.
+- Keep Flows legible top down.
 - Favor shallow graphs; compose via sub‑Flows for depth.
 - Remove unused ports and edges to reduce confusion.
 
