--- a/getting-started/login.mdx
+++ b/getting-started/login.mdx
@@ -1,12 +1,12 @@
 ---
 title: "Login & Registration"
-description: "Sign in with Discord or GitHub and session basics"
+description: "Sign in with Email, Discord or GitHub and session basics"
 ---
 
 ## Sign in
 
 1. Go to **app.triform.ai**.
-2. Choose **Magic Link, Discord** or **GitHub**.
+2. Choose **Email**, **Discord** or **GitHub**.
 3. Approve OAuth and you’ll be redirected to your Canvas.
 
 ## First‑time registration
