--- a/getting-started/quickstart.mdx
+++ b/getting-started/quickstart.mdx
@@ -29,7 +29,7 @@ When you first log in, you'll see:
 Let's build a simple workflow using Triton:
 
 1. Click in the **Chat Panel** at the bottom
-2. Type: _"Build me a Flow that takes a text input and returns it uppercased"_
+2. Type: _"Build me a Flow that gives me a summary of the latest news from HackerNews"_
 3. Watch as Triton:
    - Plans the structure
    - Creates the necessary components
@@ -60,20 +60,11 @@ Now that you've created and executed your first Flow, try:
 
 ## Next steps
 
-<CardGroup cols={2}>
-  <Card title="Learn the Workspace" icon="browser" href="/getting-started/workspace-overview">
-    Deep dive into the Canvas, Chat, and Properties panels
-  </Card>
-  <Card title="Core Concepts" icon="book" href="/concepts/projects">
-    Understand Projects, Agents, Flows, and Actions
-  </Card>
-  <Card title="Build a Project" icon="hammer" href="/tutorials/build-a-new-project">
-    Follow a complete tutorial
-  </Card>
-  <Card title="Chat with Triton" icon="robot" href="/triton/overview">
-    Master the AI assistant
-  </Card>
-</CardGroup>
+Explore the documentation to learn more about:
+- The Workspace interface
+- Core Concepts like Projects, Agents, Flows, and Actions
+- Building your first Project
+- Using Triton, the AI assistant
 
 ## Common first-time questions
 
@@ -87,12 +78,11 @@ Everything auto-saves. Your Projects, Flows, Agents, and Actions are persisted a
 Actions use Python. Agents can interact with any API or service through Actions.
 
 **Q: Is there a free tier?**  
-Yes! Check our [quotas documentation](/quotas/index) for details on free and paid tiers.
+Yes! Check our quotas documentation for details on free and paid tiers.
 
 ## Need help?
 
 - Ask Triton directly in the Chat Panel
 - Join our [Discord community](https://discord.gg/triform)
-- Check the [FAQ](/support/faq) for common questions
-- [Contact support](/support/contact-us) for technical issues
+- Contact support for technical issues
 
