--- a/support/contact-us.mdx
+++ b/support/contact-us.mdx
@@ -7,32 +7,19 @@ description: "Get in touch with the Triform team"
 
 For questions, technical support, or assistance:
 
-**Email:** support@triform.ai
-
-**Response time:**
-- Free tier: 2-3 business days
-- Pro tier: 1 business day
-- Enterprise: 4 hours (business hours)
-
 **Discord:** [discord.gg/triform](https://discord.gg/triform)
 - General questions: #help
 - Community discussion: #general
 - Response: Community-driven, usually < 1 hour
 
-**Live Chat:** (Pro & Enterprise)
-- Click chat icon in bottom-right of app
-- Hours: Monday-Friday, 9 AM - 6 PM PT
-- Response: < 5 minutes during business hours
-
 ## Specific Inquiries
 
 ### Sales & Pricing
 
-**For:** Plan upgrades, Enterprise quotes, volume pricing
+**For:** Enterprise quotes, volume pricing
 
 **Email:** sales@triform.ai  
-**Phone:** Coming soon  
-**Book a call:** [triform.ai/demo](https://triform.ai/demo)
+**Phone:** +46722 99 99 99 
 
 **We'll discuss:**
 - Your use case and requirements
@@ -41,45 +28,11 @@ For questions, technical support, or assistance:
 - Onboarding and training
 - SLA and support options
 
-### Billing & Payments
-
-**For:** Invoices, payment issues, subscription changes
-
-**Email:** billing@triform.ai  
-**Self-service:** Account Settings → Billing
-
-**Response time:** 1 business day
-
-**Common requests:**
-- Update payment method
-- Download invoices
-- Cancel subscription
-- Apply discount codes
-- Request refunds
-
-### Security & Compliance
-
-**For:** Security questions, compliance docs, DPA requests
-
-**Email:** security@triform.ai  
-**DPO:** dpo@triform.ai
-
-**Response time:** 2 business days
-
-**We can provide:**
-- Security whitepaper
-- SOC 2 report (when available)
-- Data Processing Agreement (DPA)
-- Sub-processor list
-- Compliance attestations
-
-**For vulnerabilities:** security@triform.ai (urgent, 24hr response)
-
 ### Partnerships
 
 **For:** Integration partnerships, reseller agreements, co-marketing
 
-**Email:** partnerships@triform.ai
+**Email:** sales@triform.ai
 
 **Response time:** 1 week
 
@@ -107,8 +60,7 @@ For questions, technical support, or assistance:
 
 **For:** Job opportunities, internships, working at Triform
 
-**Careers page:** [triform.ai/careers](https://triform.ai/careers)  
-**Email:** careers@triform.ai
+**Discord:** [discord.gg/triform](https://discord.gg/triform)
 
 **We're hiring for:**
 - Engineering (frontend, backend, ML)
@@ -116,38 +68,6 @@ For questions, technical support, or assistance:
 - Design
 - Customer success
 - Sales
-
-### Legal
-
-**For:** Terms of Service, Privacy Policy, legal questions
-
-**Email:** legal@triform.ai  
-**Documents:** [triform.ai/legal](https://triform.ai/legal)
-
-**Response time:** 5 business days
-
-**Available docs:**
-- Terms of Service
-- Privacy Policy
-- Data Processing Agreement
-- Service Level Agreement (SLA)
-- Acceptable Use Policy
-
-### Privacy & Data
-
-**For:** GDPR requests, data deletion, privacy questions
-
-**Email:** privacy@triform.ai  
-**DPO:** dpo@triform.ai
-
-**Response time:** 5 business days (legal requirement)
-
-**We can help with:**
-- Access your data
-- Delete your data
-- Correct inaccurate data
-- Export your data
-- Opt-out of communications
 
 ## Social Media
 
@@ -160,12 +80,10 @@ Follow us for updates, tips, and community:
 
 ## Office
 
-We're a **remote-first company** with no physical office.
+Come visit at our office!
 
-**Headquarters:** San Francisco, CA (registered address)  
-**Team:** Distributed globally
-
-**Time zones:** We have team members in US, EU, and Asia-Pacific for better coverage.
+**Headquarters:** Götgatan 23, 116 30 Stockholm, Sweden
+**Team:** Distributed across the Nordics
 
 ## Support Hours
 
@@ -176,52 +94,12 @@ We're a **remote-first company** with no physical office.
 
 **Business hours:** Monday-Friday, 9 AM - 6 PM PT
 
-### Live Chat
-
-**Pro & Enterprise only**
-
-**Hours:** Monday-Friday, 9 AM - 6 PM PT  
-**Response:** < 5 minutes
-
 ### Phone Support
 
 **Enterprise only**
 
 **Hours:** Monday-Friday, 9 AM - 6 PM PT  
 **Request:** Via your dedicated Slack channel or account manager
-
-## Emergency Support
-
-### For critical production issues:
-
-**Enterprise customers:**
-1. Email: support@triform.ai with subject: `[URGENT] Production Down`
-2. Message your dedicated Slack channel
-3. Call your account manager
-
-**Response:** 15 minutes
-
-**Pro customers:**
-- Email with `[URGENT]` in subject
-- Response: 1 hour
-
-**Free tier:**
-- Email (best effort)
-- Check [Status page](https://status.triform.ai) first
-
-### What counts as critical?
-
-✅ **Critical:**
-- Production system down
-- Data loss or corruption
-- Security breach
-- Complete service outage
-
-❌ **Not critical:**
-- Feature questions
-- Non-blocking bugs
-- Performance degradation
-- Feature requests
 
 ## What to Include
 
@@ -278,40 +156,13 @@ When contacting us, please include:
 ❌ Be rude or unhelpful  
 ❌ Share your information inappropriately
 
-## Feedback
-
-Have feedback on our support? We want to hear it!
-
-**Email:** feedback@triform.ai
-
-**We value:**
-- What went well
-- What could be better
-- Suggestions for improvement
-
-Your feedback helps us improve support for everyone.
-
 ## Language Support
 
-**Primary:** English
+**Primary:** English and Sweden
 
 **Additional languages:** Coming soon (Spanish, French, German, Japanese)
 
 **For now:** English-only for fastest support. Feel free to reach out in your language, but responses will be in English.
-
-## Accessibility
-
-**Need assistance?**
-
-We're committed to accessibility. If you need accommodations to use our support channels:
-
-**Email:** accessibility@triform.ai
-
-**We can provide:**
-- Alternative communication methods
-- Extended response times if needed
-- Screen reader compatible documentation
-- Video calls with captions
 
 ## Thank You
 
@@ -321,9 +172,5 @@ We appreciate you choosing Triform and taking the time to reach out. We're here 
 
 ## Related
 
-- [Support Overview](/support/overview)
-- [FAQ](/support/faq)
-- [Report a Bug](/support/report-a-bug)
-- [Request a Feature](/support/request-a-feature)
-- [Status Page](https://status.triform.ai)
+Continue exploring the support documentation and join our Discord community for help.
 
