--- a/support/overview.mdx
+++ b/support/overview.mdx
@@ -56,43 +56,12 @@ We're here to help you succeed with Triform. Whether you have questions, need te
 
 **Best for:** Quick questions, community interaction, sharing ideas
 
-### Email Support
-
-**Direct support** — Email our team for help.
-
-**Email:** support@triform.ai
-
-**Response time:**
-- **Free tier:** 2-3 business days
-- **Pro tier:** 1 business day
-- **Enterprise:** 4 hours (business hours)
-
-**Best for:** Account issues, billing questions, detailed technical problems
-
-**Tips for faster support:**
-- Include Organization ID or Project ID
-- Describe what you expected vs. what happened
-- Share error messages or screenshots
-- Note when the issue started
-
-### Live Chat
-
-**Real-time help** — Available for Pro and Enterprise customers.
-
-**Hours:** Monday-Friday, 9 AM - 6 PM PT
-
-**Access:** Click chat icon in bottom-right corner of app
-
-**Response time:** < 5 minutes during business hours
-
-**Best for:** Urgent issues, quick questions, guided troubleshooting
-
 ### Enterprise Support
 
 **Premium support** — Dedicated support for Enterprise customers.
 
 **Includes:**
-- Dedicated Slack channel
+- Dedicated Discord channel
 - Phone support
 - Video calls
 - Custom onboarding
@@ -100,42 +69,6 @@ We're here to help you succeed with Triform. Whether you have questions, need te
 - 99.9% uptime SLA
 
 **Contact:** Your account manager or enterprise@triform.ai
-
-## Support Plans
-
-### Free Tier
-
-**Included:**
-- Documentation access
-- Community Discord
-- Email support (2-3 business days)
-- Triton AI assistant
-
-**Best for:** Individual developers, small projects, learning
-
-### Pro Tier
-
-**Included everything in Free, plus:**
-- Faster email support (1 business day)
-- Live chat support (business hours)
-- Priority in feature requests
-
-**Best for:** Professional developers, production Projects, teams
-
-### Enterprise Tier
-
-**Included everything in Pro, plus:**
-- 4-hour email response time
-- Dedicated Slack channel
-- Phone and video support
-- Custom onboarding and training
-- Quarterly business reviews
-- 99.9% uptime SLA
-- Direct access to engineering team
-
-**Best for:** Large organizations, mission-critical applications, compliance needs
-
-**Contact:** sales@triform.ai
 
 ## Common Issues
 
@@ -156,7 +89,7 @@ We're here to help you succeed with Triform. Whether you have questions, need te
 1. Check execution logs in Properties → Executions
 2. Verify input payload matches schema
 3. Test each component individually
-4. Check Global Variables are set correctly
+4. Check Project Variables are set correctly
 5. Ask Triton: _"Why did execution #[ID] fail?"_
 
 **Still stuck?** Share execution ID with support
@@ -165,7 +98,7 @@ We're here to help you succeed with Triform. Whether you have questions, need te
 
 **Check:**
 1. All components configured and tested
-2. Global Variables set for production environment
+2. Project Variables set for production environment
 3. API key has deployment permissions
 4. No circular dependencies
 5. Entry point is valid
@@ -189,7 +122,6 @@ We're here to help you succeed with Triform. Whether you have questions, need te
 1. Search docs (Cmd+K / Ctrl+K)
 2. Ask Triton: _"How do I..."_
 3. Check if it's Pro/Enterprise only
-4. See if it's on the [Roadmap](/roadmap/alerts)
 
 **Still stuck?** Ask in Discord #help
 
@@ -200,7 +132,6 @@ We're here to help you succeed with Triform. Whether you have questions, need te
 Found a bug? Please report it!
 
 **Report via:**
-- [Report a Bug](/support/report-a-bug) form
 - Bug icon in app (bottom-right)
 - Discord #bugs channel
 - Email: support@triform.ai
@@ -214,10 +145,9 @@ Found a bug? Please report it!
 - Browser/environment info
 
 **We'll:**
-1. Acknowledge within 24 hours
-2. Triage severity
-3. Fix and update you on progress
-4. Credit you in changelog (optional)
+Triage severity
+Fix and update you on progress
+Credit you in changelog (optional)
 
 ### Security Issues
 
@@ -244,9 +174,7 @@ Found a bug? Please report it!
 Have an idea to improve Triform?
 
 **Submit via:**
-- [Request a Feature](/support/request-a-feature) form
 - Discord #feature-requests channel
-- Email: product@triform.ai
 
 **Good feature requests include:**
 - What problem it solves
@@ -275,138 +203,32 @@ We value your feedback to make Triform better.
 
 **Via:**
 - Feedback icon in app
-- Email: feedback@triform.ai
 - Discord #general
 
 **Your input shapes our roadmap.**
 
-## Training & Resources
-
-### Video Tutorials
-
-Coming soon! Subscribe for updates.
-
-### Webinars
-
-**Monthly webinars** covering:
-- Getting started
-- Advanced techniques
-- New features
-- Customer showcases
-
-**Register:** https://triform.ai/webinars
-
-### Office Hours
-
-**Weekly open Q&A** with the Triform team.
-
-**When:** Thursdays, 10 AM PT  
-**Where:** Discord voice channel  
-**Format:** Bring your questions, we'll help live
-
-### Blog
-
-**Product updates, tutorials, and stories:**
-https://triform.ai/blog
-
-**Subscribe:** RSS feed available
-
-## Status & Incidents
-
-**System status:** [status.triform.ai](https://status.triform.ai)
-
-**Subscribe:** Get notified of incidents and maintenance
-
-**Historical uptime:** See [Status](/status/index) page
-
-## Service Level Agreement (SLA)
-
-### Response times
-
-| Tier | Email | Chat | Phone |
-|------|-------|------|-------|
-| Free | 2-3 business days | N/A | N/A |
-| Pro | 1 business day | 5 minutes | N/A |
-| Enterprise | 4 hours | 5 minutes | 1 hour |
-
-**Business hours:** Monday-Friday, 9 AM - 6 PM PT
-
-### Uptime guarantees
-
-**Free:** Best effort, no SLA  
-**Pro:** 99.5% uptime  
-**Enterprise:** 99.9% uptime
-
 **SLA credits:** If we don't meet guaranteed uptime, you receive service credits. See service agreement for details.
-
-## Contact Information
-
-**General support:** support@triform.ai  
-**Security issues:** security@triform.ai  
-**Billing questions:** billing@triform.ai  
-**Sales inquiries:** sales@triform.ai  
-**Partnerships:** partnerships@triform.ai  
-**Press:** press@triform.ai
 
 **Discord:** [discord.gg/triform](https://discord.gg/triform)  
 **Twitter/X:** [@triformai](https://x.com/triformai)  
 **LinkedIn:** [linkedin.com/company/triformai](https://linkedin.com/company/triformai)
-
-**Office:** (virtual-first company, no physical office)
-
-## Response Time Expectations
-
-We aim to respond within these timeframes:
-
-**Critical issues (production down):**
-- Enterprise: 15 minutes
-- Pro: 1 hour
-- Free: 4 hours
-
-**High priority (major functionality broken):**
-- Enterprise: 1 hour
-- Pro: 4 hours
-- Free: 1 business day
-
-**Normal priority (questions, minor issues):**
-- Enterprise: 4 hours
-- Pro: 1 business day
-- Free: 2-3 business days
-
-**Low priority (feature requests, feedback):**
-- All tiers: Best effort, no SLA
-
-**Note:** Times are for first response, not resolution.
 
 ## Self-Service Resources
 
 Before contacting support, try:
 
 ✅ **Search documentation** — Most questions answered here  
-✅ **Check FAQ** — Common questions and answers  
 ✅ **Ask Triton** — Built-in AI assistant  
 ✅ **Search Discord** — Community might have answered it  
-✅ **Check status page** — Is there an outage?  
 ✅ **Review execution logs** — Error details help debug
-
-## Escalation
-
-If your issue isn't being resolved:
-
-1. **Reply to existing ticket** — Keep conversation in one thread
-2. **Reference ticket number** — When following up
-3. **Request escalation** — If urgent or stuck
-4. **Contact manager** — For Enterprise, escalate to account manager
 
 **We're committed to resolving all issues.**
 
 ## International Support
 
-**Languages:** English (primary), more coming
+**Languages:** Swedish, English and Finnish
 
-**Timezones:** We aim for 24-hour coverage (Enterprise)
-
-**Regional data:** EU and APAC data centers available (Enterprise)
+**Regional data:** EU Only
 
 ## Thank You
 
