--- a/triton/defining.mdx
+++ b/triton/defining.mdx
@@ -314,13 +314,9 @@ _"This Project handles customer onboarding: account creation, welcome email, ini
 
 ## Next steps
 
-Once you've defined your Project:
+Once you've defined your Project, continue with:
+1. Building it with Triton
+2. Editing and refining components
 
-1. [Build it with Triton](/triton/building)
-2. [Edit and refine components](/triton/editing)
-3. [Debug any issues](/triton/debugging)
-
-Or jump back to:
-- [Triton Overview](/triton/overview)
-- [Build a New Project Tutorial](/tutorials/build-a-new-project)
+Explore the Triton documentation for more details on these topics.
 
