--- a/triton/overview.mdx
+++ b/triton/overview.mdx
@@ -178,10 +178,10 @@ While Triton is powerful, it:
 
 ## Next steps
 
-- [Defining with Triton](/triton/defining) — Structure Projects conversationally
-- [Building with Triton](/triton/building) — Create components step-by-step
-- [Editing with Triton](/triton/editing) — Modify existing work
-- [Debugging with Triton](/triton/debugging) — Troubleshoot issues
+Continue exploring the Triton documentation to learn about:
+- Defining Projects conversationally
+- Building components step-by-step
+- Editing and modifying existing work
 
 ## Examples
 
