--- a/tutorials/build-a-new-project.mdx
+++ b/tutorials/build-a-new-project.mdx
@@ -166,18 +166,11 @@ Now that you've built a complete Project:
 - **Share it** — Invite team members to collaborate
 - **Extend it** — Create variations for different news categories
 
-## Related tutorials
-
-- [Edit an Existing Project](/tutorials/edit-an-existing-project)
-- [Integrate Project into Your App](/tutorials/integrate-project-into-your-app)
-- [Understanding Flows](/concepts/flows)
-- [Working with Agents](/concepts/agents)
-
 ## Tips for success
 
 > **Start simple** — Build and test each component individually before connecting them
 
-> **Use Global Variables** — Store API keys, base URLs, and configuration centrally
+> **Use Project Variables** — Store API keys, base URLs, and configuration centrally
 
 > **Save test payloads** — Keep example inputs for regression testing
 
