--- a/tutorials/edit-a-specific-component.mdx
+++ b/tutorials/edit-a-specific-component.mdx
@@ -83,7 +83,7 @@ Flows are graphs of connected nodes.
 
 ### Opening a Flow
 
-1. Double-click the Flow node
+1. Click the Flow node
 2. The Canvas zooms into the Flow's internal structure
 3. You see: Input node, processing nodes, Output node, edges
 
@@ -326,9 +326,5 @@ Track changes to components:
 
 ## Next steps
 
-- [Build a New Project](/tutorials/build-a-new-project)
-- [Integrate Project into Your App](/tutorials/integrate-project-into-your-app)
-- [Understanding Actions](/concepts/actions)
-- [Understanding Agents](/concepts/agents)
-- [Understanding Flows](/concepts/flows)
+Continue exploring the documentation to learn about building new Projects, integrating them into your apps, and understanding Actions, Agents, and Flows.
 
