--- a/tutorials/integrate-project-into-your-app.mdx
+++ b/tutorials/integrate-project-into-your-app.mdx
@@ -474,15 +474,5 @@ def call_triform_cached(payload):
 
 ## Next steps
 
-- [Understanding Deployments](/concepts/deployments)
-- [API Keys Management](/concepts/api-keys)
-- [Monitoring Best Practices](/roadmap/monitoring)
-- [Quotas and Limits](/quotas/index)
-- [Security Overview](/security/overview)
-
-## Additional resources
-
-- [API Reference](/api-reference/introduction)
-- [Webhook Integration](/api-reference/endpoint/webhook)
-- [Support](/support/overview)
+Continue exploring the documentation to learn about deployments, API key management, monitoring, quotas, and security best practices.
 
