--- a/workspace/canvas/agent-toolbox.mdx
+++ b/workspace/canvas/agent-toolbox.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Canvas: Agent Toolbox View"
+title: "Agent Toolbox View"
 description: "Configure agent tools and tips for curation"
 ---
 
