--- a/workspace/canvas/flow-view/basics.mdx
+++ b/workspace/canvas/flow-view/basics.mdx
@@ -243,7 +243,4 @@ Input → Process → [success] → Output
 
 ## Next steps
 
-- [Creating and Connecting Nodes](/workspace/canvas/flow-view/create-connect)
-- [Understanding I/O Nodes](/workspace/canvas/flow-view/io-nodes)
-- [Node Interactions](/workspace/canvas/flow-view/node-interactions)
-- [Full Flow View Reference](/workspace/canvas/flow-view)
+Continue exploring the Flow View documentation to learn about creating and connecting nodes, understanding I/O nodes, and node interactions.
