--- a/workspace/canvas/flow-view/create-connect.mdx
+++ b/workspace/canvas/flow-view/create-connect.mdx
@@ -375,7 +375,4 @@ Iteration over items or until condition met.
 
 ## Next steps
 
-- [Understanding I/O Nodes](/workspace/canvas/flow-view/io-nodes)
-- [Node Interactions](/workspace/canvas/flow-view/node-interactions)
-- [Flow View Basics](/workspace/canvas/flow-view/basics)
-- [Building Flows with Triton](/triton/building)
+Continue exploring the Flow View documentation to learn about I/O nodes, node interactions, and flow view basics. Use Triton to help you build Flows efficiently.
