--- a/workspace/canvas/flow-view/io-nodes.mdx
+++ b/workspace/canvas/flow-view/io-nodes.mdx
@@ -486,7 +486,4 @@ Process user action.
 
 ## Next steps
 
-- [Creating and Connecting Nodes](/workspace/canvas/flow-view/create-connect)
-- [Node Interactions](/workspace/canvas/flow-view/node-interactions)
-- [Understanding Flows](/concepts/flows)
-- [Building with Triton](/triton/building)
+Continue exploring the documentation to learn about creating and connecting nodes, node interactions, understanding Flows, and building with Triton.
