--- a/workspace/canvas/flow-view/node-interactions.mdx
+++ b/workspace/canvas/flow-view/node-interactions.mdx
@@ -392,7 +392,4 @@ Large Flows can have dozens of nodes:
 
 ## Next steps
 
-- [Creating and Connecting Nodes](/workspace/canvas/flow-view/create-connect)
-- [Understanding I/O Nodes](/workspace/canvas/flow-view/io-nodes)
-- [Flow View Basics](/workspace/canvas/flow-view/basics)
-- [Editing with Triton](/triton/editing)
+Continue exploring the documentation to learn about creating and connecting nodes, understanding I/O nodes, flow view basics, and editing with Triton.
