--- a/security/compliance.mdx
+++ b/security/compliance.mdx
@@ -61,7 +61,7 @@ Triform is committed to meeting industry standards and regulatory requirements t
 
 ### SOC 2 Type II
 
-**Status:** 🟡 In progress (audit Q4 2025)
+**Status:** 🟡 Planned (2026)
 
 **Scope:** Trust Services Criteria
 
@@ -102,62 +102,6 @@ Triform is committed to meeting industry standards and regulatory requirements t
 - Comprehensive security management
 - Regular audits and continuous improvement
 
-## Industry-specific compliance
-
-### HIPAA (Healthcare)
-
-**Status:** ❌ Not currently supported
-
-**For healthcare data:** Triform is not currently HIPAA-compliant. Do not store Protected Health Information (PHI) in Projects.
-
-**Roadmap:** HIPAA compliance planned for Enterprise tier in 2026.
-
-### PCI DSS (Payment Card Industry)
-
-**Status:** ⚠️ Limited
-
-**Guidance:** Do not store credit card numbers in Projects. Use payment processors (Stripe, PayPal) instead.
-
-**What Triform does:**
-- Payment processing via PCI-compliant providers
-- No storage of full credit card numbers
-- Tokens only
-
-**What you should do:**
-- Never store card numbers in Global Variables or code
-- Use payment APIs that return tokens
-- Refer to payment processor's PCI compliance
-
-### SOX (Sarbanes-Oxley)
-
-**Status:** ⚠️ Partial
-
-**For public companies:** Triform provides audit logs and access controls to support SOX compliance, but additional controls may be needed.
-
-**What we provide:**
-- Audit logs (all data access and changes)
-- Role-based access control
-- Separation of duties (roles)
-- Change management (deployment history)
-
-**What you need:**
-- Document your use of Triform in compliance program
-- Implement additional controls as needed
-- Regular access reviews
-
-### FERPA (Education)
-
-**Status:** ⚠️ Limited
-
-**For educational data:** Treat as confidential. Use appropriate access controls.
-
-**Best practices:**
-- Limit access to student data
-- Use encryption (automatic in Triform)
-- Implement audit logging (automatic)
-- Review access regularly
-- Document data use
-
 ## Data protection measures
 
 ### Technical controls
@@ -169,7 +113,6 @@ Triform is committed to meeting industry standards and regulatory requirements t
 
 **Access control:**
 - Role-based access (RBAC)
-- Multi-factor authentication (2FA)
 - Session management
 - IP allowlisting (Enterprise)
 
@@ -193,11 +136,6 @@ Triform is committed to meeting industry standards and regulatory requirements t
 - Incident response plan
 - Business continuity plan
 
-**Training:**
-- Annual security training for all employees
-- Phishing simulations
-- Incident response drills
-
 **Vendor management:**
 - Security questionnaires
 - Contract reviews
@@ -215,47 +153,27 @@ We use trusted third-party services:
 
 ### Infrastructure
 
-**AWS (Amazon Web Services)**
+**Scaleway**
 - **Service:** Cloud infrastructure
 - **Data processed:** All customer data
-- **Location:** US (standard), EU/APAC (optional)
+- **Location:** France, EU/APAC
 - **Compliance:** SOC 2, ISO 27001, GDPR, many others
 - **DPA:** Standard Contractual Clauses
 
-### Authentication
-
-**Auth0**
-- **Service:** Authentication and identity management
-- **Data processed:** User credentials, profile data
-- **Location:** US
+**6G AI Sweden**
+- **Service:** Inference
+- **Data processed:** Data sent through Agents
+- **Location:** Sweden
 - **Compliance:** SOC 2, ISO 27001, GDPR
 - **DPA:** Standard Contractual Clauses
 
 ### Payment processing
 
-**Stripe**
-- **Service:** Payment processing
+**Polar**
+- **Service:** Payment processing, Record of Merchant
 - **Data processed:** Payment methods, billing info
-- **Location:** US
-- **Compliance:** PCI DSS Level 1, SOC 2
-- **DPA:** Standard Contractual Clauses
-
-### Monitoring & analytics
-
-**Datadog**
-- **Service:** Application monitoring
-- **Data processed:** Logs (anonymized), metrics
-- **Location:** US
-- **Compliance:** SOC 2, ISO 27001, GDPR
-- **DPA:** Standard Contractual Clauses
-
-### Communication
-
-**SendGrid**
-- **Service:** Email delivery
-- **Data processed:** Email addresses, email content
-- **Location:** US
-- **Compliance:** SOC 2, ISO 27001, GDPR
+- **Location:** Sweden
+- **Compliance:** PCI DSS Level 1, SOC 2, ISO 27001, GDPR
 - **DPA:** Standard Contractual Clauses
 
 **Full list:** Available upon request to compliance@triform.ai
@@ -295,7 +213,7 @@ For GDPR and other regulations, we offer a Data Processing Agreement.
 
 ### External audits
 
-- SOC 2 audit (in progress)
+- SOC 2 audit (planned)
 - ISO 27001 (planned)
 - Penetration tests (annual)
 - Third-party security assessments
@@ -324,31 +242,11 @@ For GDPR and other regulations, we offer a Data Processing Agreement.
 - Provide clear information
 - Assist with mitigation
 
-### Government requests
-
-**Process:**
-1. Verify legitimacy of request
-2. Assess scope and legal basis
-3. Notify customer if allowed
-4. Provide minimal necessary data
-5. Document request and response
-
-**Transparency:** We publish a transparency report annually (or will when we receive requests).
-
-### Compliance with law enforcement
-
-**Principles:**
-- Comply with valid legal process
-- Challenge overly broad requests
-- Notify customers when permitted
-- Minimize data disclosed
-
 ## Industry-specific guidance
 
 ### Healthcare
 
 **If you're in healthcare:**
-- Do NOT store PHI in Triform (not HIPAA-compliant yet)
 - Use de-identified or anonymized data
 - Implement additional access controls
 - Document your compliance approach
@@ -359,7 +257,6 @@ For GDPR and other regulations, we offer a Data Processing Agreement.
 - Use encryption (automatic)
 - Enable audit logging (automatic)
 - Implement access reviews
-- Use separate environments (dev/staging/prod)
 - Document your data flows
 
 ### Education
@@ -369,24 +266,12 @@ For GDPR and other regulations, we offer a Data Processing Agreement.
 - Use access controls (automatic)
 - Review who has access regularly
 - Implement data retention policies
-- Train staff on FERPA requirements
 
 ### Government
 
 **If you're in government:**
-- Check FedRAMP requirements (not currently compliant)
-- Use US data centers only
-- Implement additional access controls
 - Document security practices
 - Consider on-premises options (contact sales)
-
-## Compliance roadmap
-
-**2025 Q4:** SOC 2 Type II audit completion  
-**2026 Q1:** Bug bounty program launch  
-**2026 Q2:** ISO 27001 certification begin  
-**2026 Q3:** HIPAA compliance (Enterprise)  
-**2026 Q4:** ISO 27001 certification complete
 
 ## Requesting compliance documentation
 
@@ -421,23 +306,14 @@ We can provide attestations for:
 
 ## FAQs
 
-**Q: Are you SOC 2 compliant?**  
-A: Audit in progress, expected completion Q4 2025.
-
-**Q: Can I use Triform for HIPAA data?**  
-A: Not yet. HIPAA compliance planned for 2026 (Enterprise).
-
 **Q: Where is my data stored?**  
-A: US by default. EU and APAC options for Enterprise.
+A: EU by default. EU and APAC options for Enterprise.
 
 **Q: Do you sell my data?**  
 A: No, we never sell customer data.
 
-**Q: Can I get a BAA (Business Associate Agreement)?**  
-A: Not yet, as we're not HIPAA-compliant. Coming 2026.
-
 **Q: Do you support on-premises deployment?**  
-A: Not currently. Contact sales for future availability.
+A: Contact sales for availability.
 
 ## Contact
 
@@ -450,8 +326,5 @@ A: Not currently. Contact sales for future availability.
 
 ## Related
 
-- [Security Overview](/security/overview)
-- [Data Retention](/security/data-retention)
-- [Account Settings](/users/account-settings)
-- [Organizations](/orgs/overview)
+Continue exploring the security documentation to learn about security overview, data retention, and compliance measures.
 
